feat: added new workflow to update Account
