# src/main/java/com/midas/app/models/enums/ProviderType.java
@@ -1,0 +1,5 @@
+package com.midas.app.models.enums;
+
+public enum ProviderType {
+  STRIPE
+}
